@@ -322,15 +322,15 @@ public class Tools {
     public static String cheminWithCorre(Chemin che, TypeCout critere) {
         String r = "";
         // on enleve les arrete vers alpha et omega
-        che.aretes().removeFirst();
-        che.aretes().removeLast();
+        che.aretes().remove(0);
+        che.aretes().remove(che.aretes().size()-1);
 
         for (Chemin cheModal : CheminImpl.splitByModalite(che)) {
             if (!r.isEmpty()) {
                 r += " puis ";
             }
-            r += cheModal.aretes().getFirst().getModalite() + " de " +
-                    cheModal.aretes().getFirst().getDepart() + " à " + cheModal.aretes().getLast().getArrivee() + " ";
+            r += cheModal.aretes().get(0).getModalite() + " de " +
+                    cheModal.aretes().get(0).getDepart() + " à " + cheModal.aretes().get(cheModal.aretes().size()-1).getArrivee() + " ";
             if (cheModal.aretes().size() > 1) {
                 r += "en passant par";
                 for (int i = 1; i < cheModal.aretes().size(); i++) {
